# Isaac

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  1.0_isaac-original-from-parrot-os.py  AGENT_3_SUMMARY.md  AGENT_QUICK_REFERENCE.md  AI_ROUTING_BUILD_SUMMARY.md  ALIAS_ARCHITECTURE.md  ALIAS_PERFORMANCE.md  ANALYSIS_FILES_README.md  AUDIT_DETAILED_REPORT.txt  AUDIT_QUICK_SUMMARY.txt  CLEANUP_SUMMARY.md  CMakeLists.txt  CODE_COMPLEXITY.md  CODE_QUALITY_AUDIT_2025.md  COMMAND_REFERENCE_v2.md  COMMAND_SCHEMA_AUDIT.csv  COMMAND_TIER_AUDIT.csv  COMPLETE_REFERENCE.md  COMPLETION_REPORT.md  CONFIG_REFERENCE.md  CROSSPLATFORM_ROADMAP.md  CUSTOM_ENDPOINT_UPDATE.md  DEAD_COMMANDS.md  DOCUMENTATION_AUDIT.csv  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_QUICK_WINS.md  ENTRY_POINTS.md  GIT_PUSH_GUIDE.md  HOUSEKEEPING_REPORT.md  HOUSEKEEPING_SUMMARY.txt  HOW_TO_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPORT_CYCLES.md  ISAAC_CLAUDE_CODE_ANALYSIS.md  ISAAC_COMMAND_REFERENCE.md  (+97 more)
.archive/: isaac
.claude/: DOCUMENTATION_CLEANUP.md  DOCUMENTATION_INDEX.md  TRACK1.2_QUICK_START.md  TRACK1_QUICK_START.md  bugs  settings.local.json
.github/: copilot-instructions.md  copilot-instructions_for-new.md
Codey-McCodeBot-todo/: suggestion 1.md
docs/: AI_ROUTING_BUILD_SUMMARY.md  COMMAND_MIGRATION_GUIDE.md  FUTURE_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE4_BACKGROUND_EXECUTION.md  PHASE_5_5_GUIDE.md  README.md  REMAINING_WORK_BACKLOG.md  exact-spacing.md  my_screen.md  my_screen2.md  my_screen3.md  my_screen4.md  my_screen5.md  my_screen6.md  my_screen_weird.md  nxt-phz.md
examples/: analytics_demo.py  phase_5_5_examples.py
instructions/: P0-1_prefix_enforcement.yaml  P0-2_strip_logic.yaml  P0-3_casual_patterns.yaml  TRACK1.2_IMPLEMENTATION_SPEC.md  TRACK4_AI_INTEGRATION_SPEC.md  TRACK4_IMPLEMENTATION_COMPLETE.md  collections_api_404.md  command_standardization_plan.md  config_console_mvp_handoff.md  mvp_config_console_spec.md  piping_system_phase1.md  streaming_spinner_enhancement.md  togrok_to_mine_rename.md  traffic.md  ui_simplification.md  unified_dispatcher_spec.md
isaac/: __init__.py  __main__.py
l/: __main__.py
old proman base files/: cpf.py  newfile.py  setpro.py
phase2_5_cloudclient/: 00_run_order.yaml  01_feature_brief.md  02_impl_cloud_client.md  03_impl_session_manager.md  change header column-cell spacing.md  decision flow chart.md  popup_terminal.md  terminal window detail
php_api/: .htaccess  config.php  get_session.php  health_check.php  save_session.php
reference/: README.md
(+803 files in other folders)
